2009-03-17  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBTempLog.py:

	Initialize _need_clear before creating the temp table.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Command.py:
	* pycvsanaly2/extensions/Metrics.py:

	Update Command from misc and do not use run_sync() in Metrics
	since it's now deprecated. 
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Use RepositoryHandler exceptions instead of Command exceptions
	when running commands through RepositoryHandler.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/__init__.py:

	Fix a typo.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/ExtensionsManager.py:
	* pycvsanaly2/extensions/__init__.py:

	Do not use Exception message attribute since it has been
	deprecated as of python 2.6.
	
2009-03-11  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Update documentation
	
2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Instead of skipping files when something fails, we now store it in
	the database setting to -1 the metric values that failed. So, from
	now on:
	 - Positive values: metric was successfully calculated
	 - Null values: metric is not supported for the file type
	 - -1: metric is supported but failed
	
2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Fix checkouts and updates that I broke in a previous commit.
	
2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Database.py:

	Do not use Exception message attribute since it has been
	deprecated as of python 2.6 and it's not actually useful for us.
	
2009-03-10  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Try again up to 3 times when a checkout/update fails, just in case
	it's short temporary network problem.
	